# mdx

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  install.ps1  install.sh  nat.md
.github/workflows/: ci.yml  pages.yml  release.yml
src/: cli.rs  completions.rs  convert.rs  diff.rs  export.rs  fetch.rs  fmt.rs  frontmatter.rs  lib.rs  lint.rs  main.rs  parse.rs  present.rs  publish.rs  search.rs  stats.rs  terminal.rs  text.rs  toc.rs  update.rs  watch.rs
src/html/: assets.rs  mod.rs
src/render/: block.rs  code.rs  image.rs  inline.rs  math.rs  mod.rs  rule.rs  table.rs
src/serve/: mod.rs
src/style/: color.rs  mod.rs  theme.rs
tests/: basic_test.rs  serve_test.rs  stress_search.sh
tests/fixtures/: blockquotes.md  code.md  edge_cases.md  headings.md  inline.md  lists.md  stress.md  tables.md  test.md
