[package]
name = "mdx"
version = "5.2.0"
edition = "2024"
description = "A terminal markdown renderer with colors, formatting, and diagram support"
license = "MIT"
repository = "https://github.com/Harsh-2002/MDX"
homepage = "https://github.com/Harsh-2002/MDX"
keywords = ["markdown", "terminal", "cli", "renderer"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "md"

[dependencies]
comrak = { version = "0.50", default-features = false, features = ["syntect"] }
clap = { version = "4", features = ["derive"] }
terminal_size = "0.4"
supports-color = "3"
textwrap = "0.16"
unicode-width = "0.2"
syntect = "5.2"
crossterm = "0.29"
typed-arena = "2"
clap_complete = "4"
clap_mangen = "0.2"
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"], optional = true }
notify = { version = "7", optional = true }
open = { version = "5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures-core = { version = "0.3", optional = true }
ratatui = { version = "0.29", optional = true }
ansi-to-tui = { version = "7", optional = true }
ureq = { version = "3", optional = true }
dom_smoothie = { version = "0.16", optional = true }
htmd = { version = "0.5", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = { version = "0.22", optional = true }
similar = "2"
markdown2pdf = "0.2"
genpdfi = { version = "0.2", features = ["images"] }

[features]
default = ["url", "images"]
watch = ["dep:notify", "dep:ratatui", "dep:ansi-to-tui"]
serve = ["watch", "dep:axum", "dep:tokio", "dep:open", "dep:tower-http", "dep:tokio-stream", "dep:futures-core"]
url = ["dep:ureq", "dep:dom_smoothie", "dep:htmd"]
images = ["dep:image", "dep:base64"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
